Checking in Fabian Guisset's <hidday@geocities.com> fix for bug 95476. Making objectElement.tabIndex not always return -1. r=sicking@bigfoot.com, sr=jst@netscape.com